# QRate

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  test_installation.py
config/: rules.yaml
qrate/: __init__.py  csv_handler.py  curation_engine.py  main.py  operators.py  species_checker.py
qrate/config/: rules.yaml  species_complex_mapping.yaml  species_scheme_mapping.yaml  species_synonym_mapping.yaml
src/: csv_handler.py  curation_engine.py  main.py  operators.py
